charon/tests/ui/pointers-in-consts.out
error: Unsupported constant: `ConstantExprKind::Cast {..}`
 --> tests/ui/pointers-in-consts.rs:6:9
  |
6 |         DISGUISED_INT => {}
  |         ^^^^^^^^^^^^^
  |

ERROR The extraction generated 1 errors
